Fixed bug with jumping pagination

--- a/src/components/Country/Country.scss
+++ b/src/components/Country/Country.scss
@@ -16,5 +16,7 @@ $border-radius: 18px;
     background-color: var(--color-green-790);
     font-size: 1.4rem;
     padding: 0.6rem 1rem;
+    display: flex;
+    align-items: center;
   }
 }
